--- a/index.html
+++ b/index.html
@@ -4,18 +4,121 @@
 
 <head>
 
+<link rel="stylesheet" type="text/css" href="zoopage.css">
+
+	<title> Explore Wellington Zoo </title>
+
+<link href="https://fonts.googleapis.com/css?family=Niramit:600&display=swap" rel="stylesheet">
 
 </head>
 
 
+
+
+
 <body> 
 
-<h1> ANIMALS OF WELLINGTON </h1>
+
+<div id="topbar">
+  <!-- <img src="./orange.png" width="100%" height=200px> -->
+  <h1 style="font-size: 70px; color: white;"> Wellington Zoo </h1>
+</div>
+
+
+
+<div id="buttons">
+	<div class="home">
+	      <h1 style="color: white;"> Home </h1>
+    </div>
+    <div class="next">
+	      <h1 style="color: white;"> Next Place </h1>
+    </div>
+
+</div>
+
+
+
+
+<!-- <h1 style="padding-bottom: 50px"> Wellington Zoo </h1>-->
+<!-- <home button> -->
+
+<!-- <next page button> -->
+
+
+<h3 style="padding-top: 50px"> Found in Newtown, Wellington zoo is over 100 years old.<br> It is home to over 500 animals, of over 100 different species. </h3>
+<p style="padding-top: 30px"> Click on the animals below for a fun fact! </p>
+
+
+<break></break>
 
 
 
 
 
+<div id="frontImage">
+
+		<div class="animals" id="zebra">
+			<img src="./zebra.png" width="100%">
+			<h3> Zebra </h3>
+			<p class="disc" id="zebraDisc"> Every zebra has a unique pattern of stripes </p>
+		</div>
+
+		<div class="animals" id="tiger">
+			<img src="./tiger.png" width="100%">
+			<h3> Tiger </h3>
+			<p class="disc" id="tigerDisc"> Tigers are good swimmers, and like to cool off in pools of water </p>
+		</div>
+
+		<div class="animals" id="elephant">
+			<img src="./elephant.png" width="100%">
+			<h3> Elephant </h3>
+			<p class="disc" id="elephantDisc">Placeholder fact about elephants </p>
+		</div>
+
+		<div class="animals" id="giraffe">
+			<img src="./giraffe.png" width="100%">
+			<h3> Giraffe </h3>
+			<p class="disc" id="giraffeDisc"> Giraffes have bluish purple tongues that are covered in hair </p>
+		</div>
+
+		<div class="animals" id="charmelion">
+			<img src="./charmelian.png" width="100%">
+			<h3> Charmelion </h3>
+			<p class="disc" id="charmelionDisc"> Chameleons can change colour by controlling crystals in their skin </p>
+		</div>
+		
+	</div>
+
+<break> </break>
+
+
+
+
+<div id="green" style="padding-top: 50px">
+	<h1> Information for parents </h1>
+</div>
+
+
+
+<!-- <div class="map" style="text-align:center">
+	<div class="gmap_canvas">
+		<iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Wellington%20Zoo&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+	</div>
+	<style>.map{ text-align:center; height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none;height:500px;width:600px;}</style>
+	</div>
+ -->
+
+
+
+
+
+
+
+
+
+
+
+<script type="text/javascript" src="./zoopage.js"></script>
 </body>
 
 
