--- a/index.html
+++ b/index.html
@@ -114,12 +114,8 @@
 
 
 <div class="map" style="text-align:center">
-	<div class="gmap_canvas">
-		<iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Wellington%20Zoo&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+<img src="./giraffe.png" width="100%">
 	</div>
-	<style>.map{ text-align:center; height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none;height:500px;width:600px;}</style>
-</div>
-
 
 <h2 style="padding-top: 50px"> Opening hours </h2>
 <p style="padding-bottom: 25px"> The Wellington Zoo is open from 9:30am to 5:00pm every day (Monday-Sunday) </p>
